added user apis, its swagger and some fixes
